[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Foundation",
    "Foundation_Collections",
    "Web_Syndication",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]
